Change status code from 200 to 204 when updating task or user
