# task-manager-api/swagger.json
@@ -100,7 +100,7 @@
           }
         ],
         "responses": {
-          "200": { "description": "Task updated successfully" },
+          "204": { "description": "Task updated successfully" },
           "404": { "description": "Task not found" },
           "500": { "description": "Internal Server Error" }
         }
@@ -198,7 +198,7 @@
           }
         ],
         "responses": {
-          "200": { "description": "User updated successfully" },
+          "204": { "description": "User updated successfully" },
           "404": { "description": "User not found" },
           "500": { "description": "Internal Server Error" }
         }
